Mon May 21 10:40:40 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor1.c: improve test

Thu May 17 12:32:33 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_checks.c:
	* src/odbc/odbc_util.c:
	- avoid core
	- fix and check invalid values of num_param_rows and curr_param_row

Thu May 17 09:18:19 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/warning.c: improve and comments

Wed May 16 14:23:00 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/sql2tds.c:
	- support row binding in RPC
	- reuse new odbc_get_octet_len

Wed May 16 14:23:00 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: minor updates

Mon May 14 16:04:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: remove copy error

Mon May 14 10:16:37 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c src/tds/mem.c src/tds/token.c src/tds/util.c:
	- give proper errors on protocol autodiscovery

Wed May 09 10:31:56 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: finish ODBC timeout

Fri May 03 14:54:58 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/const_params.c:
	- reset statement to be sure to cleanup

Wed May 02 16:54:13 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- use query timeout from freetds.conf

Mon Apr 30 15:14:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: use default linkage for static functions

Mon Apr 30 15:02:27 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/blk.c: fix strange link error using gcc 4.1

Mon Apr 23 09:56:05 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: fix portability issue

Fri Apr 20 15:26:15 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>