@@ -4,7 +4,6 @@ Probably I'm the only person who can fully understand these notes...
 Fixes
 -----
 IMPORTANT fix done_handling
-ODBC cursor update. See tests below
 
 Cursor and dynamic
 ------------------
@@ -16,7 +15,6 @@ Tests:
  - multiple RPCs check returns (possible??)
    (see odbc_set_return_status, odbc_set_return_params and odbc_get_param_len
    calls)
- - cursor update send all rows?? key?? not updatable??
 
 Row handling
 ------------
